--- a/src/package.json
+++ b/src/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "socialgraph",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "async": "^1.5.2",
-    "body-parser": "~1.13.2",
-    "client-sessions": "^0.7.0",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "email-validator": "^1.0.4",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "jsonwebtoken": "^5.7.0",
-    "mongodb": "^2.1.7",
-    "morgan": "~1.6.1",
-    "reqstore": "^0.1.0",
-    "router": "^1.1.4",
-    "serve-favicon": "~2.3.0"
-  }
+    "name": "socialgraph",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "~1.13.2",
+        "debug": "~2.2.0",
+        "email-validator": "^1.0.4",
+        "express": "~4.13.1",
+        "jsonwebtoken": "^5.7.0",
+        "mongodb": "^2.1.7",
+        "reqstore": "^0.1.0",
+        "router": "^1.1.4"
+    }
 }
